-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Storage Execution
-
Fully Compatible
-
ALL
-
-
Execution Team 2024-09-16, Execution Team 2024-10-14, Execution Team 2024-10-28
-
None
-
None
-
None
-
None
-
None
-
None
-
None
The InvalidTTLIndexFixer runs collMod on stepUp() to fix TTL indexes with invalid 'expireAfterSeconds' values.
In 7.3+, the InvalidTTLIndexFixer also tries to modify any non-int 'expireAfterSeconds' to be of type int via collMod.
However, the catalog doesn't get updated because the old expireAfterSeconds field is parsed as a 'safeNumberLong()', which makes it equivalent to the new expireAfterSeconds.
- is related to
-
SERVER-91498 'expireAfterSeconds' persisted in catalog as multiple types
-
- Closed
-
- related to
-
SERVER-77828 Ensure expireAfterSeconds is stored as integer type on-disk upon index creation
-
- Closed
-