SERVER-92366 CollMod can update 'expireAfterSeconds' double to its truncated int (#27893)

GitOrigin-RevId: 5c084464bc80ddc3d853a3ab3d1e2058e8b57ed8