jstests/noPassthrough/ttl/ttl_non_int_expire_after_seconds.js
@@ -1,5 +1,10 @@
 /**
- * Tests TTL indexes with invalid values for 'expireAfterSeconds'.
+ * Tests TTL indexes with non-int values for 'expireAfterSeconds'.
+ *
+ * Starting v7.3+, the 'expireAfterSeconds' index field is automatically truncated from a floating
+ * point to its integer equivalent before getting stored in the catalog. This is because users and
+ * tools rely on $listIndexes to rebuild a collection's indexes and $listIndexes reports
+ * 'expireAfterSeconds' as a 32 bit integer as part of the stable API.
  *
  * @tags: [
  *     requires_replication,
@@ -7,12 +12,9 @@
  */
 import {configureFailPoint} from "jstests/libs/fail_point_util.js";
 import {ReplSetTest} from "jstests/libs/replsettest.js";
-import {IndexBuildTest} from "jstests/noPassthrough/libs/index_build.js";
 
 const nonIntVal = 10000.7;
 const intVal = Math.floor(nonIntVal);
-
-jsTestLog("Testing expireAfterSeconds = " + nonIntVal);
 
 const rst = new ReplSetTest({
     nodes: [{}, {rsConfig: {votes: 0, priority: 0}}],
@@ -24,104 +26,127 @@ rst.startSet();
 rst.initiate();
 
 let primary = rst.getPrimary();
-const db = primary.getDB('test');
-const coll = db.t;
+const dbName = 'test';
+const collName = 'coll';
+const db = primary.getDB(dbName);
+const coll = db[collName];
 
-// Insert a document before creating the index. Index builds on empty collections skip the
-// collection scan phase, which we look for using checkLog below.
-assert.commandWorked(coll.insert({_id: 0, t: ISODate()}));
-
-// First let's test normal behavior after this issue has been resolved. Catalog contents
-// should reflect integer values.
-assert.commandWorked(coll.createIndex({t: 1}, {expireAfterSeconds: nonIntVal}));
-const catalog = coll.aggregate([{$listCatalog: {}}]).toArray();
-jsTestLog(catalog);
-assert.eq(catalog[0].db, db.getName());
-assert.eq(catalog[0].name, coll.getName());
-assert.eq(catalog[0].md.indexes.length, 2);
-assert.eq(catalog[0].md.indexes[0].spec.name, "_id_");
-assert.eq(catalog[0].md.indexes[1].spec.expireAfterSeconds, intVal);
-assert.commandWorked(coll.dropIndex(catalog[0].md.indexes[1].spec.name));
-
-// The rest of the test cases here revolve around having a TTL index in the catalog with a
-// non-integer 'expireAfterSeconds'. The current createIndexes behavior will reject index creation
-// for such values of expireAfterSeconds, so we use a failpoint to disable that checking to
-// simulate a value leftover from older MongoDB versions.
-const fpCreate = configureFailPoint(primary, 'skipTTLIndexExpireAfterSecondsValidation');
-try {
-    assert.commandWorked(coll.createIndex({t: 1}, {expireAfterSeconds: nonIntVal}));
-} finally {
-    fpCreate.off();
+function assertExpireAfterSeconds(coll, indexName, expectedExpireAfterSeconds) {
+    const indexes = coll.aggregate({$listCatalog: {}}).toArray()[0].md.indexes;
+    const index = indexes.find(index => index.spec.name === indexName);
+    assert(index,
+           `Expected to find index with ${indexName} in the catalog. Found catalog indexes: ${
+               tojson(index)}`);
+    const actualExpireAfterSeconds = index.spec.expireAfterSeconds;
+    assert.eq(expectedExpireAfterSeconds,
+              actualExpireAfterSeconds,
+              `Unexpected expireAfterSeconds field for index: ${tojson(index)}`);
 }
 
-// Log the contents of the catalog for debugging purposes in case of failure.
-let catalogContents = coll.aggregate([{$listCatalog: {}}]).toArray();
-jsTestLog("Catalog contents: " + tojson(catalogContents));
+function assertExpireAfterSecondsAcrossNodes(indexName, expectedExpireAfterSeconds) {
+    rst.awaitReplication();
+    rst.nodes.forEach(node => {
+        assert.soonNoExcept(
+            () => {
+                const nodeColl = node.getDB(dbName)[collName];
+                assertExpireAfterSeconds(nodeColl, indexName, expectedExpireAfterSeconds);
+                return true;
+            },
+            `Node ${node.host} has unexpected index catalog results. ${
+                tojson(node.getDB(dbName)[collName].aggregate([{$indexStats: {}}]).toArray())}`);
+    });
+}
 
-// TTL index should be replicated to the secondary with non-integer 'expireAfterSeconds'.
-const secondary = rst.getSecondary();
-checkLog.containsJson(secondary, 20384, {
-    namespace: coll.getFullName(),
-    properties: (spec) => {
-        jsTestLog('TTL index on secondary: ' + tojson(spec));
-        return spec.expireAfterSeconds == nonIntVal;
+// Current 'createIndex' behavior automatically truncates a non-int 'expireAfterSeconds' to
+// its integer value during validation. Thus, we use a failpoint to disable current behavior and
+// simulate a non-int value leftover from older MongoDB versions.
+function createIndexWithoutExpireAfterSecondsValidation(coll, indexName, expireAfterSeconds) {
+    const fpCreate = configureFailPoint(primary, 'skipTTLIndexExpireAfterSecondsValidation');
+    try {
+        assert.commandWorked(coll.createIndex({t: 1}, {expireAfterSeconds: nonIntVal}));
+    } finally {
+        fpCreate.off();
     }
-});
+}
 
-// Confirm that TTL index is replicated with an integer 'expireAfterSeconds' during initial
-// sync.
-const newNode = rst.add({rsConfig: {votes: 0, priority: 0}});
-rst.reInitiate();
-rst.waitForState(newNode, ReplSetTest.State.SECONDARY);
-rst.awaitReplication();
-let newNodeTestDB = newNode.getDB(db.getName());
-let newNodeColl = newNodeTestDB.getCollection(coll.getName());
-const newNodeIndexes = IndexBuildTest.assertIndexes(newNodeColl, 2, ['_id_', 't_1']);
-const newNodeSpec = newNodeIndexes.t_1;
-jsTestLog('TTL index on initial sync node: ' + tojson(newNodeSpec));
-assert(newNodeSpec.hasOwnProperty('expireAfterSeconds'),
-       'Index was not replicated as a TTL index during initial sync.');
-assert.eq(
-    newNodeSpec.expireAfterSeconds,
-    intVal,
-    nonIntVal +
-        ' expireAferSeconds was replicated as something other than expected during initial sync.');
+// Tests that by default, a non-int 'expireAfterSeconds' value is automatically truncated to an
+// integer value.
+(function testNonIntToIntByDefault() {
+    assert.commandWorked(coll.createIndex({t: 1}, {expireAfterSeconds: nonIntVal}));
+    assertExpireAfterSecondsAcrossNodes('t_1', intVal);
+    assert.commandWorked(coll.dropIndex('t_1'));
+}());
 
-jsTestLog('Beginning step down');
-// Confirm that a node with an existing TTL index with a non-integer 'expireAfterSeconds' will
-// convert the duration on the TTL index from the non-integer value to the associated integer value
-// when it becomes the primary node. When stepping down the primary, we use 'force' because there's
-// no other electable node.  Subsequently, we wait for the stepped down node to become primary
-// again.  To confirm that the TTL index has been fixed, we check the oplog for a collMod
-// operation on the TTL index that changes the `expireAfterSeconds` field from the non-integer
-// value to the associated integer value.
-assert.commandWorked(primary.adminCommand({replSetStepDown: 5, force: true}));
-primary = rst.waitForPrimary();
+// Tests that a non-int 'expireAfterSeconds' value stored in the catalog can be converted to its
+// truncated integer equivalent via collMod.
+(function testNonIntToIntByCollMod() {
+    // Force the catalog to store a non-int 'expireAfterSeconds' to simulate behavior from older
+    // versions of the server.
+    createIndexWithoutExpireAfterSecondsValidation(coll, 't_1', nonIntVal);
+    // Ensure the non-int value is stored in the catalog for both the primary and the secondaries.
+    assertExpireAfterSecondsAcrossNodes('t_1', nonIntVal);
 
-jsTestLog('Found new primary');
+    assert.commandWorked(db.runCommand(
+        {collMod: collName, index: {keyPattern: {t: 1}, expireAfterSeconds: intVal}}));
+    assertExpireAfterSecondsAcrossNodes('t_1', intVal);
 
-// Log the contents of the catalog for debugging purposes in case of failure.
-let newPrimaryColl = primary.getDB(db.getName()).getCollection(coll.getName());
-const newPrimaryCatalogContents = newPrimaryColl.aggregate([{$listCatalog: {}}]).toArray();
-jsTestLog("Catalog contents on new primary: " + tojson(newPrimaryCatalogContents));
+    assert.commandWorked(coll.dropIndex('t_1'));
+}());
 
-assert.soon(
-    () => {
-        return 1 ===
-            rst.findOplog(primary,
-                          {
-                              op: 'c',
-                              ns: newPrimaryColl.getDB().getCollection('$cmd').getFullName(),
-                              'o.collMod': coll.getName(),
-                              'o.index.name': 't_1',
-                              'o.index.expireAfterSeconds': newNodeSpec.expireAfterSeconds
-                          },
-                          /*limit=*/ 1)
-                .toArray()
-                .length;
-    },
-    'TTL index with ' + nonIntVal +
-        ' expireAfterSeconds was not fixed using collMod during step-up: ' +
-        tojson(rst.findOplog(primary, {op: {$ne: 'n'}}, /*limit=*/ 10).toArray()));
+// Tests that a node that undergoes initial sync will sync the int version of a non-int
+// 'expireAfterSeconds' from the primary.
+//
+// Note: This contrasts the standard replication behavior where the non-int value is replicated
+// to secondaries.
+(function testNonIntWithInitialSyncResultsInInt() {
+    createIndexWithoutExpireAfterSecondsValidation(coll, 't_1', nonIntVal);
+    assertExpireAfterSeconds(coll, 't_1', nonIntVal);
+
+    const newNode = rst.add({rsConfig: {votes: 0, priority: 0}});
+    rst.reInitiate();
+    rst.waitForState(newNode, ReplSetTest.State.SECONDARY);
+    rst.awaitReplication();
+    let newNodeTestDB = newNode.getDB(dbName);
+    let newNodeColl = newNodeTestDB.getCollection(collName);
+    assertExpireAfterSeconds(newNodeColl, 't_1', intVal);
+    assert.commandWorked(coll.dropIndex('t_1'));
+}());
+
+// Tests that a node with an existing TTL non-integer 'expireAfterSeconds' index converts the
+// non-integer value to its truncated integer value on step up and replicates the new value to all
+// nodes in the replica set.
+(function testNonIntNormalizedOnStepUp() {
+    createIndexWithoutExpireAfterSecondsValidation(coll, 't_1', nonIntVal);
+    assertExpireAfterSecondsAcrossNodes('t_1', nonIntVal);
+
+    jsTestLog('Beginning step down');
+    assert.commandWorked(primary.adminCommand({replSetStepDown: 5, force: true}));
+    primary = rst.waitForPrimary();
+    jsTestLog('Found new primary');
+
+    let newPrimaryColl = primary.getDB(dbName).getCollection(collName);
+    const newPrimaryCatalogContents = newPrimaryColl.aggregate([{$listCatalog: {}}]).toArray();
+    jsTestLog("Catalog contents on new primary: " + tojson(newPrimaryCatalogContents));
+    assert.soon(
+        () => {
+            return 1 ===
+                rst.findOplog(primary,
+                              {
+                                  op: 'c',
+                                  ns: newPrimaryColl.getDB().getCollection('$cmd').getFullName(),
+                                  'o.collMod': collName,
+                                  'o.index.name': 't_1',
+                                  'o.index.expireAfterSeconds': intVal,
+                              },
+                              /*limit=*/ 1)
+                    .toArray()
+                    .length;
+        },
+        'TTL index with ' + nonIntVal +
+            ' expireAfterSeconds was not fixed using collMod during step-up: ' +
+            tojson(rst.findOplog(primary, {op: {$ne: 'n'}}, /*limit=*/ 10).toArray()));
+
+    assertExpireAfterSecondsAcrossNodes('t_1', intVal);
+}());
 
 rst.stopSet();
